fix: z-index

--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -5,7 +5,7 @@
     padding: 1rem 7rem;
 
     background: var(--main-color);
-    z-index: 10;
+    z-index: 10000000000000000 !important;
 
     /* position: fixed;
     background: yellow;
